--- a/README.org
+++ b/README.org
@@ -1,1 +1,19 @@
-#+TITLE: Inference Blade
+#+options: ':nil *:t -:t ::t <:t H:3 \n:nil ^:{} arch:headline
+#+options: author:t broken-links:mark c:nil creator:nil
+#+options: d:(not "LOGBOOK") date:t e:t email:nil f:t inline:t num:t
+#+options: p:nil pri:nil prop:nil stat:t tags:t tasks:t tex:t
+#+options: timestamp:t title:t toc:t todo:t |:t
+#+title: InferBlade
+#+date: <2025-09-15 Mon>
+#+author: ongiaf
+#+email: jiazhen.gong@botanophobia.xyz
+#+language: en
+#+select_tags: export
+#+exclude_tags: noexport
+#+cite_export:
+
+#+CAPTION: A screenshot of InferBlade
+#+NAME:   fig:screenshot
+[[./assets/Screenshot.png]]
+
+* Introduction
